# Portfolio_Website

./: .gitignore  README.md  airflow_constraints.txt  pyproject.toml
.aws-sam/pipeline/: pipelineconfig.toml
.github/workflows/: main.yml  pipeline.yaml
aws/: template.yml
aws/lambda_functions/: database_script_lambda.py  iss_api_ingestion.py  misc_satellite_api_ingestion.py  n2yo_api_position_ingestion.py  n2yo_api_tle_ingestion.py  n2yo_satellite_api_ingestion.py  parse_sqs_message.py  postgre_db.py  s3_get_json_object.py  wiki_satellite_scraper.py
aws/lambda_functions/data_validation/: iss_data_validation_schema_tle.json
aws/lambda_functions/iss_position_to_s3/: iss_position_to_s3.py
aws/lambda_functions/testing/: 2y2o_data_validation_schema_tle.json  (+7 more)
aws/secrets/: aws_secrets_connection.py
aws/sql/: dbt_schema_setup.sql  insert_json_satellite_position_to_db.sql  satellite_position_ft_schema.sql  satellite_raw_schema_tables.sql  satellite_tle_ft_schema.sql  satellite_wikipedia_ft_schema copy.sql
dbt/: README.md  dbt_project.yml
dbt/logs/: dbt.log.legacy
dbt/macros/: altitude_to_orbital_velocity_mph.sql
docker/: docker-compose-first.yaml  docker-compose.yaml  docker-compose.yml  testing.py
docker/dags/: tracker.py  tracker_dag.py
docker/data/: position-06-06-2022-08-36-01.json  position-06-06-2022-08-36-08.json  position-06-12-2022-07-07-00.json  position-06-12-2022-07-07-27.json  position-06-12-2022-07-11-32.json  position-06-12-2022-07-17-15.json  this_is_a_test.json
satellite_tracker/: tracker.py
tests/: test_satellite_tracker.py
(+35 files in other folders)
